--- a/react-native/SmartConceptApp/package.json
+++ b/react-native/SmartConceptApp/package.json
@@ -10,7 +10,8 @@
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-native-safari-view": "^2.1.0",
-    "react-native-vector-icons": "^4.5.0"
+    "react-native-vector-icons": "^4.5.0",
+    "react-navigation": "^1.0.0-beta.27"
   },
   "devDependencies": {
     "babel-jest": "22.0.6",
