--- a/backend/package.json
+++ b/backend/package.json
@@ -19,9 +19,11 @@
   "dependencies": {
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
+    "mongoose": "^5.0.1",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
-    "passport-jwt": "^3.0.1"
+    "passport-jwt": "^3.0.1",
+    "uuid": "^3.2.1"
   }
 }
