--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "local": "node_modules/nodemon/bin/nodemon.js --config config/config.local.json -- node_modules/babel-cli/bin/babel-node.js index.js",
     "localaz": "node_modules/nodemon/bin/nodemon.js --config config/config.localaz.json -- node_modules/babel-cli/bin/babel-node.js index.js",
     "testaz": "node_modules/nodemon/bin/nodemon.js --config config/config.testaz.json -- node_modules/babel-cli/bin/babel-node.js index.js",
-    "android": "node_modules/nodemon/bin/nodemon.js --config config/config.android.json -- node_modules/babel-cli/bin/babel-node.js index.js",
+    "android": "node_modules/nodemon/bin/nodemon.js --config config/config.android.json -- node_modules/babel-cli/bin/babel-node.js --inspect index.js",
     "compile": "./node_modules/.bin/babel ./app ./node_modules -d ./compiled"
   },
   "author": "",
