--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^1.14.11"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "mongoose": "^5.0.1",
@@ -32,6 +33,7 @@
     "uuid": "^3.2.1"
   },
   "bundledDependencies": [
+    "body-parser",
     "lodash",
     "express",
     "mongoose",
