--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "mongoose": "^5.0.1",
+    "nodemailer": "^4.4.2",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
