Get building list from server

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
     "localaz": "node_modules/nodemon/bin/nodemon.js --config config/config.localaz.json -- node_modules/babel-cli/bin/babel-node.js index.js",
     "testaz": "node_modules/nodemon/bin/nodemon.js --config config/config.testaz.json -- node_modules/babel-cli/bin/babel-node.js index.js",
     "android": "node_modules/nodemon/bin/nodemon.js --config config/config.android.json -- node_modules/babel-cli/bin/babel-node.js --inspect index.js",
-    "compile": "./node_modules/.bin/babel ./app ./node_modules -d ./compiled"
+    "compile": "./node_modules/.bin/babel ./app -d ./compiled"
   },
   "author": "",
   "license": "ISC",
