--- a/backend/web.config
+++ b/backend/web.config
@@ -12,5 +12,6 @@
           </rule>
      </rules>
     </rewrite>
+    <httpErrors existingResponse="PassThrough" />
   </system.webServer>
 </configuration>
