--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "body-parser": "^1.18.2",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
+    "mailgun-js": "^0.16.0",
     "mongoose": "^5.0.1",
     "nodemailer": "^4.4.2",
     "passport": "^0.4.0",
