--- a/website/smartconcept/package.json
+++ b/website/smartconcept/package.json
@@ -2,7 +2,9 @@
   "name": "smartconcept",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://shabbirgoher.github.io/carwash",
   "dependencies": {
+    "gh-pages": "^1.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
@@ -11,7 +13,9 @@
     "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
     "react-router-dom": "^4.2.2"
