Added corect homepage url and CNAME for custom domain

--- a/website/smartconcept/package.json
+++ b/website/smartconcept/package.json
@@ -2,7 +2,7 @@
   "name": "smartconcept",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://shabbirgoher.github.io/carwash",
+  "homepage": "https://www.smartconceptinternational.com",
   "dependencies": {
     "gh-pages": "^1.1.0",
     "react": "^16.2.0",
