--- a/website/smartconcept/package.json
+++ b/website/smartconcept/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://www.smartconceptinternational.com",
   "dependencies": {
     "gh-pages": "^1.1.0",
+    "google-map-react": "^0.32.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
