--- a/website/smartconcept/package.json
+++ b/website/smartconcept/package.json
@@ -7,6 +7,7 @@
     "gh-pages": "^1.1.0",
     "google-map-react": "^0.32.0",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
