--- a/website/smartconcept/package.json
+++ b/website/smartconcept/package.json
@@ -5,10 +5,11 @@
   "homepage": "https://www.smartconceptinternational.com",
   "dependencies": {
     "gh-pages": "^1.1.0",
-    "google-map-react": "^0.32.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
+    "react-google-maps": "^9.4.5",
+    "react-router-bootstrap": "^0.24.4",
     "react-scripts": "1.1.1"
   },
   "scripts": {
