--- a/website/smartconcept/package.json
+++ b/website/smartconcept/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://www.smartconceptinternational.com",
   "dependencies": {
     "gh-pages": "^1.1.0",
+    "jwt-decode": "^2.2.0",
     "react": "^16.3.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.0",
